--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,11 +24,24 @@ jobs:
             goos: darwin
     steps:
       - uses: actions/checkout@v3
+
+      - name: Set APP_VERSION env
+        run: echo APP_VERSION=$(basename ${GITHUB_REF}) >> ${GITHUB_ENV}
+      - name: Set BUILD_TIME env
+        run: echo BUILD_TIME=$(date --iso-8601=seconds) >> ${GITHUB_ENV}
+      - name: Environment Printer
+        uses: managedkaos/print-env@v1.0
+
       - uses: wangyoucao577/go-release-action@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           goos: ${{ matrix.goos }}
           goarch: ${{ matrix.goarch }}
           binary_name: "banner"
-#          extra_files: README.md
+          extra_files: ban_list.txt
           md5sum: FALSE
+          ldflags: |
+            -s -w 
+            -X "main.appVersion=${{ env.APP_VERSION }}" 
+            -X "main.buildTime=${{ env.BUILD_TIME }}"
+            -X "main.gitCommit=${{ github.sha }}"
